<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                <ImageView
                        android:id="@+id/recipeDetailImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/detail_image"
                        android:scaleType="centerCrop"
                        tools:ignore="ImageContrastCheck" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="bottom"
                        android:background="@drawable/image_gradient_overlay" />
            </FrameLayout>

            <androidx.cardview.widget.CardView
                    android:id="@+id/foregroundCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginTop="-120dp"
                    app:cardCornerRadius="32dp"
                    android:layout_marginHorizontal="12dp"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="4dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                    <TextView
                            android:id="@+id/recipeDetailTitleView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_marginBottom="8dp" />


                    <TextView
                            android:id="@+id/recipeDetailDescriptionView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="#555555"
                            android:layout_marginBottom="16dp" />

                    <TextView
                            android:id="@+id/recipeDetailServingsView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#555555"
                            android:layout_marginBottom="16dp" />

                    <TextView
                            android:id="@+id/recipeDetailCountryView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#555555"
                            android:layout_marginBottom="16dp" />

                    <VideoView
                            android:id="@+id/recipeDetailVideoView"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_marginBottom="16dp"
                            android:layout_height="400dp"/>

                    <TextView
                            android:text="@string/components"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                    <TextView
                            android:id="@+id/recipeDetailComponentsView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="#555555"
                            android:layout_marginBottom="16dp" />

                    <TextView
                            android:text="@string/instructions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                    <TextView
                            android:id="@+id/recipeDetailInstructionsView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="#555555"
                            android:layout_marginBottom="16dp" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:contentDescription="@string/delete_item"
                            android:src="@android:drawable/ic_menu_delete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/green"
                            app:useCompatPadding="true"
                            app:elevation="4dp"
                            android:clickable="true"
                            android:layout_gravity="end"
                            android:id="@+id/deleteButton" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
